# hexchat

rust-port/: code.txt  petey-convo.txt  petey-thunks.txt
rust-port/hexchat-rs-backend/: Cargo.toml  README.md
rust-port/hexchat-rs-backend/crates/cli/: Cargo.toml
rust-port/hexchat-rs-backend/crates/cli/src/: main.rs
rust-port/hexchat-rs-backend/crates/config/: Cargo.toml
rust-port/hexchat-rs-backend/crates/config/src/: lib.rs
rust-port/hexchat-rs-backend/crates/core/: Cargo.toml
rust-port/hexchat-rs-backend/crates/core/src/: lib.rs
rust-port/hexchat-rs-backend/crates/dcc/: Cargo.toml
rust-port/hexchat-rs-backend/crates/dcc/src/: lib.rs
rust-port/hexchat-rs-backend/crates/net/: Cargo.toml
rust-port/hexchat-rs-backend/crates/net/src/: lib.rs
rust-port/hexchat-rs-backend/crates/plugin/: Cargo.toml
rust-port/hexchat-rs-backend/crates/plugin/src/: lib.rs
rust-port/hexchat-rs-backend/crates/proto/: Cargo.toml
rust-port/hexchat-rs-backend/crates/proto/src/: lib.rs
rust-port/hexchat-rs-backend/crates/text/: Cargo.toml
rust-port/hexchat-rs-backend/crates/text/src/: lib.rs
