[package]
name = "net"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
bytes.workspace = true
tracing.workspace = true
base64.workspace = true
rustls-pemfile.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
hmac.workspace = true
async-trait.workspace = true
proto = { path = "../proto" }
subtle.workspace = true
